fixed issue with card image alignment

--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -23,7 +23,6 @@ h1 {
 
 .cards__items {
   margin-bottom: 24px;
-  list-style-type: none;
 }
 
 .cards__item {
